Prevent keyboard on mobile when floating bar date input focus

--- a/src/styles/components/datepicker.less
+++ b/src/styles/components/datepicker.less
@@ -6,6 +6,8 @@
 .ui-datepicker {
   z-index: 1050 !important;
   display: none;
+  transform: translate3d(0px,0px,0px);
+  -webkit-transform: translate3d(0px,0px,0px);
 
   background: #fff;
   box-shadow: 0 0 1px @c-link;
